# interceder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  interceder.toml
config/: test.toml
src/: main.rs
src/core/: config.rs  server.rs
