[package]
name = "interceder"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.0"
hmac = "0.12.1"
sha2 = "0.10.8"
tide = "0.16.0"
http-types = "2.12.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.14"
serde = "1.0.204"
